[package]
name = "sektor7_essentials_dropper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["memoryapi", "processthreadsapi", "synchapi", "wincrypt", "tlhelp32", "handleapi", "winbase"] }